# cmake_samples

./: .gitignore  README.md
t1/: CMakeLists.txt  README.md  cleanup.sh  hello  main.c
t2/: CMakeLists.txt  README.md  cleanup.sh
t2/src/: CMakeLists.txt  main.c
t3/: CMakeLists.txt  README.md
t3/hello/: CMakeLists.txt  hello.h
t4/: CMakeLists.txt  README.md  cleanup.sh
t4/src/: CMakeLists.txt  main.c
t4/src/sub/: CMakeLists.txt  sub.c  sub.h
