CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(HELLO)

MESSAGE(STATUS "This is BINARY dir: " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir: " ${HELLO_SOURCE_DIR})

ADD_SUBDIRECTORY(src)

INSTALL(TARGETS hello RUNTIME DESTINATION bin)
INSTALL(FILES COPYRIGHT README.md DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2) # install files under doc to destination without doc folder
