CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

INCLUDE_DIRECTORIES(/tmp/t3/usr/include/hello)
FIND_LIBRARY(LIBHELLO NAMES hello PATHS /tmp/t3/usr/lib)

SET(SRC_LIST main.c)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_EXECUTABLE(main ${SRC_LIST})

MESSAGE(STATUS "LIBHELLO: " ${LIBHELLO})
TARGET_LINK_LIBRARIES(main ${LIBHELLO})
